--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from www.innsof.com/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:57:41 GMT -->
 <head>
-    <title>INNSOF</title>
+    <title>aalambana</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
