--- a/contact.html
+++ b/contact.html
@@ -110,19 +110,19 @@
            <div class="addrs-block india fadeInUp animationDelay">
 			  <h3><i><img src="images/india-flag.png" alt=""></i>India</h3>
 			  <p class="addrs">2420, Hilite Business Park, Fourth Floor - Tower 2,Kerala, Calicut - 673016</p>
-			  <p class="mailid"><a href="mailto:info@innsof.com">info@innsof.com</a></p>
+			  <p class="mailid"><a href="mailto:info@Aalambana.com">info@Aalambana.com</a></p>
 			  <p class="talephone"> <a href="tel:04954606416"><span>(Tel)</span> 0495 460 6416</a> <a href="tel:+917736443777"><span>(Mob)</span> +91 773 644 3777</a> </p> 
 		  </div> 
 		  <div class="addrs-block qatar animationDelay">
 			 <h3><i><img src="images/qatar-flag.png" alt=""></i>Qatar</h3>
 			 <p class="addrs">Po box: 30442, Office no: 2, building 28, Street 840, Zone 24, Rawdhat Al Khail, Doha – Qatar</p>
-			 <p class="mailid"><a href="mailto:info@innsof.com">info@innsof.com</a></p>
+			 <p class="mailid"><a href="mailto:info@Aalambana.com">info@Aalambana.com</a></p>
 			 <p class="talephone"> <a href="tel:+97433324468"><span>(Mob)</span> +974 3332 4468</a> </p>
 		  </div>
 		  <div class="addrs-block uae animationDelay">
 			 <h3><i><img src="images/uae-flag.png" alt=""></i>UAE</h3>
 			 <p class="addrs">Post box 331131, Sharjah, UAE</p>
-			 <p class="mailid"><a href="mailto:info@innsof.com">info@innsof.com</a></p>
+			 <p class="mailid"><a href="mailto:info@Aalambana.com">info@Aalambana.com</a></p>
 			 <p class="talephone"> <a href="tel:+971509727479"><span>(Mob)</span> +971 50972 7479</a> </p>
 		  </div>
 		</div>
@@ -132,13 +132,13 @@
 		  <div class="addrs-block kuwait animationDelay">
 			 <h3><i><img src="images/kuwait-flag.png" alt=""></i>KUWAIT</h3>
 			 <p class="addrs">Office No. 6, Nader Al Dabbous Building, Next to Center Point, Fahaheel, Kuwait</p>
-			 <p class="mailid"><a href="mailto:info@innsof.com">info@innsof.com</a></p>
+			 <p class="mailid"><a href="mailto:info@Aalambana.com">info@Aalambana.com</a></p>
 			 <p class="talephone"> <a href="tel:+96550252575"><span>(Mob)</span> +965 5025 2575</a> </p>
 		  </div>
 		  <div class="addrs-block saudiarabia animationDelay">
 			 <h3><i><img src="images/saudiarabia-flag.png" alt=""></i>Saudi Arabia</h3>
 			 <p class="addrs">Jeddah, Saudi Arabia (KSA)</p>
-			 <p class="mailid"><a href="mailto:info@innsof.com">info@innsof.com</a></p>
+			 <p class="mailid"><a href="mailto:info@Aalambana.com">info@Aalambana.com</a></p>
 			 <p class="talephone"> <a href="tel:+966590884490"><span>(Mob)</span> +966 5908 84490</a> </p>
 		  </div>
 		  <div class="" style="background: transparent;"> 
@@ -161,7 +161,7 @@
                               <h4 class="widget-title">Quick Links</h4>
                               <ul class="bullet4">
                                  <li><a href="about.html">About Us</a></li>
-                                 <li><a href="innsof-cutting-edge.html">Innsof Cutting Edge</a></li>
+                                 <li><a href="Aalambana-cutting-edge.html">Aalambana Cutting Edge</a></li>
                                  <li><a href="our_specialities.html">Our Specialities</a></li>
                                  <li><a href="contact.html">Contact Us</a></li>
                                  <li><a href="careers.html">Careers</a></li>
@@ -210,32 +210,32 @@
                <h4 class="widget-title">Follow us</h4>
                <ul class="social-link">
                            <li class="social-link__item"> 
-                              <a href="https://www.facebook.com/innsof/" target="_blank" class="social-list__link">
+                              <a href="https://www.facebook.com/Aalambana/" target="_blank" class="social-list__link">
                                  <span><img src="images/facebook.svg" alt="facebook"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="https://twitter.com/InfoInnsof" target="_blank" class="social-list__link">
+                              <a href="https://twitter.com/InfoAalambana" target="_blank" class="social-list__link">
                                  <span><img src="images/twitter.svg" alt="twitter"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://instagram.com/innsofsoftware?utm_medium=copy_link" target="_blank" class="social-list__link">
+                              <a href="https://instagram.com/Aalambanasoftware?utm_medium=copy_link" target="_blank" class="social-list__link">
                                  <span><img src="images/instagram.svg" alt="instagram"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="https://www.linkedin.com/in/innsof/" target="_blank" class="social-link__link">
+                              <a href="https://www.linkedin.com/in/Aalambana/" target="_blank" class="social-link__link">
                                  <span><img src="images/linkedin.svg" alt="linkedin"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://innsof.blogspot.com/" target="_blank" class="social-link__link">
+                              <a href="https://Aalambana.blogspot.com/" target="_blank" class="social-link__link">
                                  <span><img src="images/blog.svg" alt="blog"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://innsof.wordpress.com/" target="_blank" class="social-link__link">
+                              <a href="https://Aalambana.wordpress.com/" target="_blank" class="social-link__link">
                                  <span><img src="images/wordpress.svg" alt="wordpress"></span>
                               </a>
                               </li>
@@ -250,7 +250,7 @@
                   <div class="container">
                      <div class="d-flex justify-content-center">
                         
-                        <div class="qry-copy"> Copyright 2021, All rights reserved.<a href="index-2.html" target="_blank">innsof.com</a> </div>
+                        <div class="qry-copy"> Copyright 2021, All rights reserved.<a href="index-2.html" target="_blank">Aalambana.com</a> </div>
                      </div>
                   </div>
                </div>
@@ -266,5 +266,5 @@
       
    </body>
 
-<!-- Mirrored from www.innsof.com/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:47 GMT -->
+<!-- Mirrored from www.Aalambana.com/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:47 GMT -->
 </html>
