--- a/ecommerce_solutions.html
+++ b/ecommerce_solutions.html
@@ -87,7 +87,7 @@
           <div class="img-box">
             <aside> <span> <img src="images/quotation.png" alt="quote"></span> <span> Insightful applications for your future success </span> </aside>
             <img src="images/solutions_ecom.jpg" alt="Erp"></div>
-                    <p> The e-Commerce portal allows your customers to buy products online through any device, anytime, anywhere, giving the customer utmost convenience and efficiency. INNSOF provides a fully capable e-Commerce portal that makes your customer’s online purchasing experience a great one. The product catalog lists all available information on products, along with promotions and offers, and is designed to attract, appeal and entice customers. The shopping cart enables you to place your order after adding the selected products, shipping info, and payment details. The integrated portal has the required interface tools to allow you manage the online store; it is flexible and customizable to operate. It has several online payment services and integrated payment gateways for safe, secure and efficient payment processing. The system has options for   fulfilling your order and the shipping processes; allows fast delivery and status alert for better customer purchase experience.  </p>
+                    <p> The e-Commerce portal allows your customers to buy products online through any device, anytime, anywhere, giving the customer utmost convenience and efficiency. Aalambana provides a fully capable e-Commerce portal that makes your customer’s online purchasing experience a great one. The product catalog lists all available information on products, along with promotions and offers, and is designed to attract, appeal and entice customers. The shopping cart enables you to place your order after adding the selected products, shipping info, and payment details. The integrated portal has the required interface tools to allow you manage the online store; it is flexible and customizable to operate. It has several online payment services and integrated payment gateways for safe, secure and efficient payment processing. The system has options for   fulfilling your order and the shipping processes; allows fast delivery and status alert for better customer purchase experience.  </p>
         </div>
       </div>
       <div class="solution-row2">
@@ -141,7 +141,7 @@
                               <h4 class="widget-title">Quick Links</h4>
                               <ul class="bullet4">
                                  <li><a href="about.html">About Us</a></li>
-                                 <li><a href="innsof-cutting-edge.html">Innsof Cutting Edge</a></li>
+                                 <li><a href="Aalambana-cutting-edge.html">Aalambana Cutting Edge</a></li>
                                  <li><a href="our_specialities.html">Our Specialities</a></li>
                                  <li><a href="contact.html">Contact Us</a></li>
                                  <li><a href="careers.html">Careers</a></li>
@@ -230,7 +230,7 @@
                   <div class="container">
                      <div class="d-flex justify-content-center">
                         
-                        <div class="qry-copy"> Copyright 2021, All rights reserved.<a href="index-2.html" target="_blank">innsof.com</a> </div>
+                        <div class="qry-copy"> Copyright 2021, All rights reserved.<a href="index-2.html" target="_blank">Aalambana.com</a> </div>
                      </div>
                   </div>
                </div>
