--- a/erp_solutions.html
+++ b/erp_solutions.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.innsof.com/erp_solutions.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:53 GMT -->
+<!-- Mirrored from www.Aalambana.com/erp_solutions.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:53 GMT -->
 <head>
-<title>INNSOF</title>
+<title>Aalambana</title>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -84,12 +84,12 @@
     <div class="solution-section">
       <div class="content-box">
         <div class="solution-row1">
-          <h4> INNSOF Pharma – ERP Software for pharmacy chain </h4>
+          <h4> Aalambana Pharma – ERP Software for pharmacy chain </h4>
           <div class="img-box">
             <aside> <span> <img src="images/quotation.png" alt="quote"></span> <span> Innovative simple solution for Pharmaceuticals </span> </aside>
             <img src="images/erp-softwar-img1.jpg" alt="Erp"></div>
           <p> Highly automated solution for the challenges faced by pharmacy retail stores, and streamlining of business processes efficiently. </p>
-          <p> INNSOF Pharmacy ERP is an innovative solution that will be customized and implemented in accordance with the requirements of the pharmacy chain. Our Product design, with e-Commerce platform, has always been driven by customer involvement. It will automate all your business processes with workflow approvals, and provide perfect solutions to critical day-to-day business problems. The entire supply chain of the pharma sector will digitally connect dealers with pharmacists, who provide the last mile connectivity with customers. </p>
+          <p> Aalambana Pharmacy ERP is an innovative solution that will be customized and implemented in accordance with the requirements of the pharmacy chain. Our Product design, with e-Commerce platform, has always been driven by customer involvement. It will automate all your business processes with workflow approvals, and provide perfect solutions to critical day-to-day business problems. The entire supply chain of the pharma sector will digitally connect dealers with pharmacists, who provide the last mile connectivity with customers. </p>
         </div>
       </div>
       <div class="solution-row2">
@@ -115,12 +115,12 @@
     <div class="solution-section erp2">
       <div class="content-box">
         <div class="solution-row1">
-        <h4> INNSOF Medcare - ERP Software for Multi-specialty Medical Center </h4>
+        <h4> Aalambana Medcare - ERP Software for Multi-specialty Medical Center </h4>
         <div class="img-box">
           <aside> <span> <img src="images/quotation.png" alt="quote"></span> <span> Efficient medical software enriching the patient experience </span> </aside>
           <img src="images/erp-softwar-img2.jpg" alt="Erp"></div>
         <p> To provide a world-class ERP solution to simplify your entire operations in the most effective way and develop business intelligence tools for multi-specialty medical centers. </p>
-        <p> INNSOF provides doctors and medical center simple, user-friendly, feature-rich application, and perfect automation for outpatient unit, laboratory, radiology, physiotherapy, pharmacy, optical, etc. The system enables streamlining your outpatient unit through simple and effective processes for booking appointments, queue management, patient registration, recording clinical data, billing, making payments, getting prescriptions, pharmacy and laboratory reports, all optimized for fast searching and collaboration.  </p>
+        <p> Aalambana provides doctors and medical center simple, user-friendly, feature-rich application, and perfect automation for outpatient unit, laboratory, radiology, physiotherapy, pharmacy, optical, etc. The system enables streamlining your outpatient unit through simple and effective processes for booking appointments, queue management, patient registration, recording clinical data, billing, making payments, getting prescriptions, pharmacy and laboratory reports, all optimized for fast searching and collaboration.  </p>
       </div>
       </div>
       <div class="solution-row2">
@@ -166,7 +166,7 @@
                               <h4 class="widget-title">Quick Links</h4>
                               <ul class="bullet4">
                                  <li><a href="about.html">About Us</a></li>
-                                 <li><a href="innsof-cutting-edge.html">Innsof Cutting Edge</a></li>
+                                 <li><a href="Aalambana-cutting-edge.html">Aalambana Cutting Edge</a></li>
                                  <li><a href="our_specialities.html">Our Specialities</a></li>
                                  <li><a href="contact.html">Contact Us</a></li>
                                  <li><a href="careers.html">Careers</a></li>
@@ -215,32 +215,32 @@
                <h4 class="widget-title">Follow us</h4>
                <ul class="social-link">
                            <li class="social-link__item"> 
-                              <a href="https://www.facebook.com/innsof/" target="_blank" class="social-list__link">
+                              <a href="https://www.facebook.com/Aalambana/" target="_blank" class="social-list__link">
                                  <span><img src="images/facebook.svg" alt="facebook"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="https://twitter.com/InfoInnsof" target="_blank" class="social-list__link">
+                              <a href="https://twitter.com/InfoAalambana" target="_blank" class="social-list__link">
                                  <span><img src="images/twitter.svg" alt="twitter"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://instagram.com/innsofsoftware?utm_medium=copy_link" target="_blank" class="social-list__link">
+                              <a href="https://instagram.com/Aalambanasoftware?utm_medium=copy_link" target="_blank" class="social-list__link">
                                  <span><img src="images/instagram.svg" alt="instagram"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="https://www.linkedin.com/in/innsof/" target="_blank" class="social-link__link">
+                              <a href="https://www.linkedin.com/in/Aalambana/" target="_blank" class="social-link__link">
                                  <span><img src="images/linkedin.svg" alt="linkedin"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://innsof.blogspot.com/" target="_blank" class="social-link__link">
+                              <a href="https://Aalambana.blogspot.com/" target="_blank" class="social-link__link">
                                  <span><img src="images/blog.svg" alt="blog"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://innsof.wordpress.com/" target="_blank" class="social-link__link">
+                              <a href="https://Aalambana.wordpress.com/" target="_blank" class="social-link__link">
                                  <span><img src="images/wordpress.svg" alt="wordpress"></span>
                               </a>
                               </li>
@@ -255,7 +255,7 @@
                   <div class="container">
                      <div class="d-flex justify-content-center">
                         
-                        <div class="qry-copy"> Copyright 2021, All rights reserved.<a href="index-2.html" target="_blank">innsof.com</a> </div>
+                        <div class="qry-copy"> Copyright 2021, All rights reserved.<a href="index-2.html" target="_blank">Aalambana.com</a> </div>
                      </div>
                   </div>
                </div>
@@ -268,5 +268,5 @@
 <script src="js/main.js"></script>
 </body>
 
-<!-- Mirrored from www.innsof.com/erp_solutions.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:53 GMT -->
+<!-- Mirrored from www.Aalambana.com/erp_solutions.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:53 GMT -->
 </html>
