--- a/our_specialities.html
+++ b/our_specialities.html
@@ -129,7 +129,7 @@
       <div class="column-1"> 
       <h4> Our Strengths </h4>
       <h6> “Powerful solution for your business challenges” </h6>
-      <p> Our business philosophy is to treat our clients as partners, and assist them in meeting their IT solution deployment objectives, keeping in mind the project resources. We are proud of our technical abilities, our ability to understand a client’s requirements and translate them into efficient solutions. Environmental sustainability practices form the bedrock principle of INNSOF. Our strength is the trust and confidence we have earned from our employees, customers and suppliers.  </p>
+      <p> Our business philosophy is to treat our clients as partners, and assist them in meeting their IT solution deployment objectives, keeping in mind the project resources. We are proud of our technical abilities, our ability to understand a client’s requirements and translate them into efficient solutions. Environmental sustainability practices form the bedrock principle of Aalambana. Our strength is the trust and confidence we have earned from our employees, customers and suppliers.  </p>
       </div>
       <div class="img-box" style="background-image:url(images/solution_img5.jpg);">   
       </div>
@@ -187,7 +187,7 @@
                               <h4 class="widget-title">Quick Links</h4>
                               <ul class="bullet4">
                                  <li><a href="about.html">About Us</a></li>
-                                 <li><a href="innsof-cutting-edge.html">Innsof Cutting Edge</a></li>
+                                 <li><a href="Aalambana-cutting-edge.html">Aalambana Cutting Edge</a></li>
                                  <li><a href="our_specialities.html">Our Specialities</a></li>
                                  <li><a href="contact.html">Contact Us</a></li>
                                  <li><a href="careers.html">Careers</a></li>
@@ -276,7 +276,7 @@
                   <div class="container">
                      <div class="d-flex justify-content-center">
                         
-                        <div class="qry-copy"> Copyright 2021, All rights reserved.<a href="index-2.html" target="_blank">innsof.com</a> </div>
+                        <div class="qry-copy"> Copyright 2021, All rights reserved.<a href="index-2.html" target="_blank">Aalambana.com</a> </div>
                      </div>
                   </div>
                </div>
