--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                     <div class="container">
                         <div class="d-flex justify-content-center">
 
-                            <div class="qry-copy"> Copyright 2023, All rights reserved.<a href="index-2.html" target="_blank">innsof.com</a> </div>
+                            <div class="qry-copy"> Copyright 2023, All rights reserved.<a href="#" target="_blank">aalambana.net</a> </div>
                         </div>
                     </div>
                 </div>
