--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                                 <h4 class="widget-title">Follow us</h4>
                                 <ul class="social-link">
                                     <li class="social-link__item">
-                                        <a href="https://www.facebook.com/Aalambana/" target="_blank" class="social-list__link">
+                                        <a href="https://www.facebook.com/" target="_blank" class="social-list__link">
                                             <span><img src="images/facebook.svg" alt="facebook"></span>
                                         </a>
                                     </li>
