--- a/ecommerce_solutions.html
+++ b/ecommerce_solutions.html
@@ -3,7 +3,7 @@
 
 <!-- Mirrored from www.innsof.com/ecommerce_solutions.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:42 GMT -->
 <head>
-<title>INNSOF</title>
+<title>Aalambana</title>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
