--- a/ecommerce_solutions.html
+++ b/ecommerce_solutions.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.innsof.com/ecommerce_solutions.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:42 GMT -->
 <head>
 <title>Aalambana</title>
 <meta charset="utf-8" />
@@ -191,32 +190,32 @@
                <h4 class="widget-title">Follow us</h4>
                <ul class="social-link">
                            <li class="social-link__item"> 
-                              <a href="https://www.facebook.com/innsof/" target="_blank" class="social-list__link">
+                              <a href="#" target="_blank" class="social-list__link">
                                  <span><img src="images/facebook.svg" alt="facebook"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="https://twitter.com/InfoInnsof" target="_blank" class="social-list__link">
+                              <a href="#" target="_blank" class="social-list__link">
                                  <span><img src="images/twitter.svg" alt="twitter"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://instagram.com/innsofsoftware?utm_medium=copy_link" target="_blank" class="social-list__link">
+                              <a href="#" target="_blank" class="social-list__link">
                                  <span><img src="images/instagram.svg" alt="instagram"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="https://www.linkedin.com/in/innsof/" target="_blank" class="social-link__link">
+                              <a href="#" target="_blank" class="social-link__link">
                                  <span><img src="images/linkedin.svg" alt="linkedin"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://innsof.blogspot.com/" target="_blank" class="social-link__link">
+                              <a href="#" target="_blank" class="social-link__link">
                                  <span><img src="images/blog.svg" alt="blog"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://innsof.wordpress.com/" target="_blank" class="social-link__link">
+                              <a href="#" target="_blank" class="social-link__link">
                                  <span><img src="images/wordpress.svg" alt="wordpress"></span>
                               </a>
                               </li>
@@ -244,5 +243,4 @@
 <script src="js/main.js"></script>
 </body>
 
-<!-- Mirrored from www.innsof.com/ecommerce_solutions.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:43 GMT -->
 </html>
