--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
    
 <head>
-      <title>INNSOF</title> 
+      <title>Aalambana</title> 
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -87,7 +87,7 @@
          <div class="container">
             <div class="row1">
                <h2>Infinite possibilities<br> bringing to your business</h2>
-               <h6>INNSOF is a technology solution provider who offers innovative, secured, industry focused simple business solutions with focus on the healthcare industry.</h6>
+               <h6>Technology solution provider who offers innovative, secured, industry focused simple business solutions with focus on the healthcare industry.</h6>
             </div>
             <div class="row2">
                <div class="img-blck" style="background-image: url(images/abt-img.jpg);">
@@ -199,32 +199,32 @@
                <h4 class="widget-title">Follow us</h4>
                <ul class="social-link">
                            <li class="social-link__item"> 
-                              <a href="https://www.facebook.com/innsof/" target="_blank" class="social-list__link">
+                              <a href="#" target="_blank" class="social-list__link">
                                  <span><img src="images/facebook.svg" alt="facebook"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="https://twitter.com/InfoInnsof" target="_blank" class="social-list__link">
+                              <a href="#" target="_blank" class="social-list__link">
                                  <span><img src="images/twitter.svg" alt="twitter"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://instagram.com/innsofsoftware?utm_medium=copy_link" target="_blank" class="social-list__link">
+                              <a href="#" target="_blank" class="social-list__link">
                                  <span><img src="images/instagram.svg" alt="instagram"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="https://www.linkedin.com/in/innsof/" target="_blank" class="social-link__link">
+                              <a href="#" target="_blank" class="social-link__link">
                                  <span><img src="images/linkedin.svg" alt="linkedin"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://innsof.blogspot.com/" target="_blank" class="social-link__link">
+                              <a href="#" target="_blank" class="social-link__link">
                                  <span><img src="images/blog.svg" alt="blog"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://innsof.wordpress.com/" target="_blank" class="social-link__link">
+                              <a href="#" target="_blank" class="social-link__link">
                                  <span><img src="images/wordpress.svg" alt="wordpress"></span>
                               </a>
                               </li>
@@ -254,5 +254,4 @@
       
    </body>
 
-<!-- Mirrored from www.innsof.com/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:10 GMT -->
 </html>
