--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
    
-<!-- Mirrored from www.innsof.com/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:45 GMT -->
 <head>
-      <title>aalambana</title>
+      <title>Aalambana</title>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
