--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
 		  </div>
 		</div>
 	 </div>
-      <div class="cont-sec-2">
+      <!-- <div class="cont-sec-2">
          <div class="container"> 
 		  <div class="addrs-block kuwait animationDelay">
 			 <h3><i><img src="images/kuwait-flag.png" alt=""></i>KUWAIT</h3>
@@ -144,7 +144,7 @@
 		  <div class="" style="background: transparent;"> 
 		  </div>
 		</div>
-      </div>
+      </div> -->
 
       <div class="map">
          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4653.59508522979!2d75.83281827914075!3d11.247324339100222!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb7d35b5655d9b4ec!2sHiLITE%20Builders!5e0!3m2!1sen!2sro!4v1637749531682!5m2!1sen!2sro" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
