--- a/our_specialities.html
+++ b/our_specialities.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.innsof.com/our_specialities.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:16 GMT -->
 <head>
-<title>INNSOF</title>
+<title>Aalambana</title>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -88,7 +87,7 @@
       <div class="column-1"> 
       <h4> Business Domain Knowledge </h4>
       <h6> “Profound knowledge in business processes” </h6>
-      <p> INNSOF has excellent business domain expertise in healthcare, and provides first class ERP solutions with advanced business intelligence and automation. We are dedicated to helping our clients run their business efficiently, supporting them to gain greater insight into their business activities, and providing them lasting benefits by automating their business processes.  </p>
+      <p> Aalambana has excellent business domain expertise in healthcare, and provides first class ERP solutions with advanced business intelligence and automation. We are dedicated to helping our clients run their business efficiently, supporting them to gain greater insight into their business activities, and providing them lasting benefits by automating their business processes.  </p>
       </div>
       <div class="img-box" style="background-image:url(images/solution_img1.jpg);">   
       </div>
@@ -109,7 +108,7 @@
       <div class="column-1"> 
       <h4> Superior Customer Experience </h4>
       <h6> “Seamless user-experience to impress your stakeholders”  </h6>
-      <p> At INNSOF, we deliver powerful, integrated healthcare solutions which will provide its stakeholders utmost satisfaction, enabling business automation with an intuitive userexperience and continuous innovation. We help healthcare professionals to utilize the full potential of modern technologies, enabling more visibility in every aspect of business and data-driven decisions.   </p>
+      <p> We deliver powerful, integrated healthcare solutions which will provide its stakeholders utmost satisfaction, enabling business automation with an intuitive userexperience and continuous innovation. We help healthcare professionals to utilize the full potential of modern technologies, enabling more visibility in every aspect of business and data-driven decisions.   </p>
       </div>
       <div class="img-box" style="background-image:url(images/solution_img3.jpg);">   
       </div>
@@ -237,32 +236,32 @@
                <h4 class="widget-title">Follow us</h4>
                <ul class="social-link">
                            <li class="social-link__item"> 
-                              <a href="https://www.facebook.com/innsof/" target="_blank" class="social-list__link">
+                              <a href="#" target="_blank" class="social-list__link">
                                  <span><img src="images/facebook.svg" alt="facebook"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="https://twitter.com/InfoInnsof" target="_blank" class="social-list__link">
+                              <a href="#" target="_blank" class="social-list__link">
                                  <span><img src="images/twitter.svg" alt="twitter"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://instagram.com/innsofsoftware?utm_medium=copy_link" target="_blank" class="social-list__link">
+                              <a href="#" target="_blank" class="social-list__link">
                                  <span><img src="images/instagram.svg" alt="instagram"></span>
                               </a> 
                            </li>
                            <li class="social-link__item">
-                              <a href="https://www.linkedin.com/in/innsof/" target="_blank" class="social-link__link">
+                              <a href="#" target="_blank" class="social-link__link">
                                  <span><img src="images/linkedin.svg" alt="linkedin"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://innsof.blogspot.com/" target="_blank" class="social-link__link">
+                              <a href="#" target="_blank" class="social-link__link">
                                  <span><img src="images/blog.svg" alt="blog"></span>
                               </a>
                            </li>
                            <li class="social-link__item">
-                              <a href="https://innsof.wordpress.com/" target="_blank" class="social-link__link">
+                              <a href="#" target="_blank" class="social-link__link">
                                  <span><img src="images/wordpress.svg" alt="wordpress"></span>
                               </a>
                               </li>
@@ -290,5 +289,4 @@
 <script src="js/main.js"></script>
 </body>
 
-<!-- Mirrored from www.innsof.com/our_specialities.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Oct 2023 06:59:22 GMT -->
 </html>
