--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="container">
                 <div class="d-flex">
                     <h3 class="fadeInUp">Lorem Ipsum</h3>
-                    <!-- <div class="center-logo fadeIn"><img src="images/insof-center.png" alt=""></div> -->
+                    <div class="center-logo fadeIn"><img src="images/aalambana-centrelogo.png" alt=""></div>
                     <a href="Aalambana-cutting-edge.html" class="btn1 desk-view">This are our core values. <span>READ MORE</span><i><img src="images/arrow.png" alt=""></i></a>
                 </div>
                 <div class="logo-center-wrap">
