--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         </aside>
                         <i><img src="images/lettr-n.png" alt=""></i>
                     </div>
-                    <img src="images/insof-center.png" alt="" class="center-logo2">
+                    <img src="images/aalambana-centrelogo.png" alt="" class="center-logo2">
                     <div class="letter-block align-left four fadeInUp">
                         <aside>
                             <h5>Lorem Ipsum</h5>
