--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 </div>
             </div>
         </section>
-        <section class="section solutions fadeIn" id="section6">
+        <!-- <section class="section solutions fadeIn" id="section6">
             <div class="container">
                 <h3 class="fadeIn">Solutions</h3>
                 <p class="fadeIn">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
@@ -374,8 +374,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <!--
+        </section> -->
+        
            <section class="section" id="section7">
              <div class="client_review">
                <div class="container">
@@ -415,7 +415,7 @@
                </div>
              </div>
            </section>
-           -->
+          
         <section class="section business-locations" id="section7">
             <div class="container">
                 <div class="colm-1">
