--- a/contact.html
+++ b/contact.html
@@ -109,15 +109,15 @@
          <div class="container">
            <div class="addrs-block india fadeInUp animationDelay">
 			  <h3><i><img src="images/india-flag.png" alt=""></i>India</h3>
-			  <p class="addrs">2420, Hilite Business Park, Fourth Floor - Tower 2,Kerala, Calicut - 683106</p>
+			  <p class="addrs">Metro pillar no:30 Aluva, Ernakulam, Kerala - 683106</p>
 			  <p class="mailid"><a href="mailto:info@Aalambana.com">info@Aalambana.com</a></p>
-			  <p class="talephone"> <a href="tel:04954606416"><span>(Tel)</span> 0495 460 6416</a> <a href="tel:+917736443777"><span>(Mob)</span> +91 773 644 3777</a> </p> 
+			  <p class="talephone"> <a href="tel:+918547080910"><span>(Mob)</span> +91 854 708 0910</a> </p> 
 		  </div> 
 		  <div class="addrs-block qatar animationDelay">
 			 <h3><i><img src="images/qatar-flag.png" alt=""></i>Qatar</h3>
 			 <p class="addrs">Po box: 30442, Office no: 2, building 28, Street 840, Zone 24, Rawdhat Al Khail, Doha – Qatar</p>
-			 <p class="mailid"><a href="mailto:info@Aalambana.com">info@Aalambana.com</a></p>
-			 <p class="talephone"> <a href="tel:+97433324468"><span>(Mob)</span> +974 3332 4468</a> </p>
+			 <p class="mailid"><a href="mailto:info@Aalambana.com">info@aalambana.com</a></p>
+			 <p class="talephone"> <a href="tel:+97444364436"><span>(Mob)</span> +974 4436 4436</a> </p>
 		  </div>
 		  <div class="addrs-block uae animationDelay">
 			 <h3><i><img src="images/uae-flag.png" alt=""></i>UAE</h3>
