--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="container">
                 <div class="d-flex">
                     <h3 class="fadeInUp">Lorem Ipsum</h3>
-                    <div class="center-logo fadeIn"><img src="images/aalambana-centrelogo.png" alt=""></div>
+                    <div class="center-logo fadeIn"><img src="images/aalambana-centrelogo.png" alt="centrelogo"></div>
                     <a href="Aalambana-cutting-edge.html" class="btn1 desk-view">This are our core values. <span>READ MORE</span><i><img src="images/arrow.png" alt=""></i></a>
                 </div>
                 <div class="logo-center-wrap">
@@ -250,7 +250,7 @@
                         </aside>
                         <i><img src="images/lettr-n.png" alt=""></i>
                     </div>
-                    <img src="images/aalambana-centrelogo.png" alt="" class="center-logo2">
+                    <img src="images/aalambana-centrelogo.png" alt="centrelogo" class="center-logo2">
                     <div class="letter-block align-left four fadeInUp">
                         <aside>
                             <h5>Lorem Ipsum</h5>
