--- a/index.html
+++ b/index.html
@@ -385,11 +385,11 @@
                  <div class="content-box  fadeInRight">
                    <h3>What our clients have to say</h3>
                    <div class="client-review-slider">
-                     <div> <i><img src="images/coma.png" alt=""></i>
+                     <div> <i><img src="images/coma.png" alt="coma"></i>
                        <p>It is a pleasure to associate with Aalambana.  They designed  an excellent, tailor-made ERP software for our pharmacy chain, being implemented as per our business needs and enhancing it continuously for business growth. We are completely satisfied and recommend it to anyone looking to digitally improve their pharmacy chain operations.</p>
                        <p class="client-name"><span>Director,</span> Wellcare Pharmacies</p>
                      </div>
-                     <div> <i><img src="images/coma.png" alt=""></i>
+                     <div> <i><img src="images/coma.png" alt="coma"></i>
                        <p>It is a pleasure to associate with Aalambana.  They designed  an excellent, tailor-made ERP software for our pharmacy chain, being implemented as per our business needs and enhancing it continuously for business growth. We are completely satisfied and recommend it to anyone looking to digitally improve their pharmacy chain operations.</p>
                        <p class="client-name"><span>Director,</span> Wellcare Pharmacies</p>
                      </div>
