--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="container">
                 <div class="d-flex">
                     <h3 class="fadeInUp">Lorem Ipsum</h3>
-                    <div class="center-logo fadeIn"><img src="images/insof-center.png" alt=""></div>
+                    <!-- <div class="center-logo fadeIn"><img src="images/insof-center.png" alt=""></div> -->
                     <a href="Aalambana-cutting-edge.html" class="btn1 desk-view">This are our core values. <span>READ MORE</span><i><img src="images/arrow.png" alt=""></i></a>
                 </div>
                 <div class="logo-center-wrap">
@@ -260,7 +260,7 @@
                     </div>
                     <div class="letter-block align-left five fadeInUp">
                         <aside>
-                            <h5>Lorem Ipsum/h5>
+                            <h5>Lorem Ipsum</h5>
                             <p>“Lorem Ipsum is simply dummy text of the printing and typesetting industry”</p>
                         </aside>
                         <i><img src="images/lettr-o.png" alt=""></i>
